--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.35</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>1.3.5.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <build>
