--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,11 @@
       <artifactId>spring-kafka</artifactId>
       <version>1.3.5.RELEASE</version>
     </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.apache.kafka</groupId>-->
+      <!--<artifactId>kafka-clients</artifactId>-->
+      <!--<version>1.1.0</version>-->
+    <!--</dependency>-->
   </dependencies>
 
   <build>
