redisson分布式锁及工具类整理

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,6 +73,10 @@ kafka:
       self: second
 redis:
   channel: test
+# redisson lock
+redisson:
+  address: redis://127.0.0.1:6379
+  password: 123456
 
 
 
