--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,8 +75,8 @@ redis:
   channel: test
 # redisson lock
 redisson:
-  address: redis://127.0.0.1:6379
-  password: 123456
+  address: 127.0.0.1:6379
+  password:
 
 
 
